Implement update functionality
